# soundlist

./: .env.example  .gitignore  404.html  CLAUDE.md  README.md  app.js  index.html  marquee.html  pyproject.toml  styles.css
alembic/: env.py
alembic/versions/: c11ac3946af5_initial_schema.py
app/: __main__.py  admin.py  auth.py  csrf.py  db.py  flash.py  library.py  lists.py  main.py  models.py  panel.py  serializer.py  settings.py
app/templates/: admin.html  base.html  channel.html  dashboard.html  library.html  test.html
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION.md  INTEGRATION.md  PLAN.md  REQUIREMENTS.md  SECURITY.md  SETUP.md  TASKLIST.md
lists/: Krisuna.json  RinMunchkin.json
lists/internals/: IconTriggers2.json
scripts/: import_json.py
tests/: conftest.py  test_auth.py  test_importer.py  test_library.py  test_panel.py  test_parity.py  test_serializer.py  test_static.py
