[project]
name = "soundlist"
version = "0.1.0"
description = "Soundlist management panel with Twitch OAuth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlmodel>=0.0.21,<1.0",
    "authlib>=1.3,<2.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "itsdangerous>=2.2,<3.0",
    "python-multipart>=0.0.12,<1.0",
    "pydantic-settings>=2.4,<3.0",
]

[project.scripts]
soundlist = "app.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
    "pylint>=3.3,<4.0",
]


[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # function calls in default args (FastAPI Depends pattern)
    "N999",   # invalid module name (app/ package)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pylint.main]
py-version = "3.11"
jobs = 1

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
]

[tool.pylint.design]
max-args = 8
max-attributes = 12

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
