[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "soundlist"
version = "0.1.0"
description = "Soundlist management panel with Twitch OAuth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlmodel>=0.0.21,<1.0",
    "authlib>=1.3,<2.0",
    "httpx>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "itsdangerous>=2.2,<3.0",
    "python-multipart>=0.0.12,<1.0",
    "pydantic-settings>=2.4,<3.0",
]

[project.scripts]
soundlist = "app.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6,<1.0",
    "pylint>=3.3,<4.0",
    "pyright>=1.1,<2.0",
]


[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # function calls in default args (FastAPI Depends pattern)
    "N999",   # invalid module name (app/ package)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pylint.main]
py-version = "3.11"
jobs = 1
# sqlmodel/pydantic use dynamic attrs; skip import analysis
ignored-modules = ["sqlmodel", "pydantic", "pydantic_settings", "authlib"]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
    # FastAPI Depends() args present for auth side-effects, value unused
    "unused-argument",
    # FastAPI Form/Depends DI pattern inherently exceeds positional limit
    "too-many-positional-arguments",
]

[tool.pylint.design]
# Form DI classes have 8 fields; route handlers stay under 7
max-args = 9
max-locals = 20
max-attributes = 12

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pyright>=1.1,<2.0",
    "httpx2>=2.0,<3.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # starlette.testclient prefers httpx2; warning silenced while httpx
    # 0.x is still the runtime transport (revisit when httpx2 fully adopted)
    "ignore::starlette.testclient.StarletteDeprecationWarning",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
